# FFmpegAVTutorial

./: AAC_TIMESTAMP_TIMEBASE_COMPARISON_REPORT.md  BUILD_MIGRATION_REPORT.md  CONTAINER_FORMAT_TS_MP4_FLV_REPORT.md  FFMPEG_ENCODER_VS_MEDIACODEC_REPORT.md  H264_AUD_COMPATIBILITY_REPORT.md  LIVE_FLV_MUX_DEBUG_REPORT.md  MEDIA_CODEC_TIMESTAMP_REPORT.md  MODULE_IMPORT_ROADMAP.md  README.md  VIDEO_SOFT_ENCODE_540P_DEBUG_REPORT.md  VIDEO_SOFT_ENCODE_BFRAME_TIMESTAMP_REPORT.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/lovelymaple/ffmpegavtutorial/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AVBufferDemo.cpp  AVEngine.cpp  AVFrameDemo.cpp  AVPacketDemo.cpp  AVRationalDemo.cpp  CMakeLists.txt  FrameQueueDemo.cpp  MediaProbeDemo.cpp  MovieExtractDemo.cpp  NativeLog.cpp  NativeLog.h  StreamingTopicDemo.cpp  native-lib.cpp
app/src/main/cpp/lib/ffmpeg/include/libavcodec/: codec_id.h
app/src/main/cpp/lib/ffmpeg/include/libavformat/: demux.h  url.h
app/src/main/cpp/lib/ffmpeg/include/libavutil/: error.h  ffversion.h
app/src/main/cpp/lib/ffmpeg/include/libffmpeg/: config.h  config_components.h
app/src/main/cpp/lib/openssl/include/openssl/: configuration.h
app/src/main/java/com/lovelymaple/ffmpegavtutorial/: AacEncodeActivity.kt  AudioCaptureActivity.kt  CameraPreviewActivity.kt  DeviceCodecInfoActivity.kt  FFmpegInfoActivity.kt  FeatureCatalog.kt  FeatureDetailActivity.kt  FlvMuxActivity.kt  H264EncodeActivity.kt  LiveFlvMuxActivity.kt  MainActivity.kt  SystemBarSpacer.kt
app/src/main/java/com/lovelymaple/ffmpegavtutorial/audio/: AacEncodeActivity.kt  AudioCaptureActivity.kt
app/src/main/java/com/lovelymaple/ffmpegavtutorial/basic/: AvBufferGuideActivity.kt  AvFrameGuideActivity.kt  AvPacketGuideActivity.kt  AvRationalGuideActivity.kt  BufferGuideActivity.kt  CameraInfoActivity.kt  CameraPreviewActivity.kt  DeviceCodecInfoActivity.kt  FFmpegInfoActivity.kt  H264EncodeActivity.kt  H264ProfileLevelGuideActivity.kt  H264StreamAnalyzerActivity.kt  H265StreamAnalyzerActivity.kt  MovieExtractActivity.kt  MovieProberActivity.kt  StreamingTopicActivity.kt  VideoEncodeActivity.kt  VideoSoftEncodeActivity.kt
app/src/main/java/com/lovelymaple/ffmpegavtutorial/container/: FlvMuxActivity.kt  LiveFlvMuxActivity.kt  RtmpPushActivity.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/layout/: activity_aac_encode.xml  activity_audio_capture.xml  activity_av_buffer_guide.xml  activity_av_frame_guide.xml  activity_av_packet_guide.xml  activity_av_rational_guide.xml  activity_buffer_guide.xml  activity_camera_info.xml  activity_camera_preview.xml  activity_device_codec_info.xml  activity_feature_detail.xml  activity_ffmpeg_info.xml  activity_flv_mux.xml  activity_h264_encode.xml  activity_h264_profile_level_guide.xml  activity_h264_stream_analyzer.xml  activity_live_flv_mux.xml  activity_main.xml  activity_movie_extract.xml  activity_movie_prober.xml  activity_rtmp_push.xml  activity_streaming_topic.xml  activity_video_encode.xml  activity_video_soft_encode.xml  item_feature_row.xml  item_feature_section.xml
app/src/main/res/values/: strings.xml  strings_av_buffer.xml  strings_av_frame.xml  strings_av_packet.xml  strings_av_rational.xml  strings_buffer_guide.xml  strings_movie_extract.xml  strings_movie_prober.xml  strings_streaming_topic.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/lovelymaple/ffmpegavtutorial/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
tools/: AacEncodeActivity.androidcodec.kt  CMakeLists.androidcodec.txt  MainActivity.androidcodec.kt  NativeInstance.androidcodec.java  androidcodec_strings.xml  migrate_androidcodec_audio.ps1  migrate_androidcodec_h264_profile_level.ps1  migrate_androidcodec_video.ps1  rename_androidcodec_basic_to_video.ps1
(+5 files in other folders)
